                    Add no files notify if where is no files need to process in 
                    'commit', 'revert' dialog
ShellWindow.py mRun.py
                    Improvement. Replace the popup menu, and add Copy Without Prompts 
                    menu item. And if the result cann't be convert to unicode, then
                    display the result as repr().
                    
[2007/08/26]
DirBrowser.py svn_plugin
                    Improvement. Adding icon set used to indicate svn status
                    Add saving file automatically update the svn icon status,
                    update Chinese translation
                    
mInputAssistant.py  Changing ESC to Alt+Q to cancel snip.
                    
[2007/08/25]
DirBrowser.py SvnSupport.py mRun.py
                    Add refreshing current folder functionality after the svn 
                    command finished
mSearch.py          Fix Ctrl+B bug. The position is not the right, it's less 1.
svn_plugin          Make svn support a plugin, so if you want to use svn, you
                    should enable the svn_plugin first.
                    
[2007/08/24]
Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
                    Editor.py I don't if it'll fix the problem in linux
mView.py            Change long line indicator default is true.
InputAssistant.py SnipMixin.py mInputAssistant.py
                    Fix snippet template indent bug(when using tab mode, the '\t'
                    in template will be replaced with spaces). And you can press
                    ESC to cancel current snippet.
SvnSupport.py mVersionControl.py mRun.py Entry.py
                    Add simple SVN support, and also many things need to finish.
                    
[2007/08/23]
UliPad.py           Now you can set pythonpath option in config.ini/[default], 
                    and ulipad will insert it into the sys.path. pythonpath can 