@@ -1,0 +1,4 @@
+import doctest
+import sys
+
+doctest.testfile(sys.argv[0], verbose=True)
